# DiceBox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GeneralVision.scad  README.md  box.scad  globals.scad  hinge.scad  hinged_upper_part.scad  levered_upper_part.scad  lower_part.scad  main_closure.scad  toolkit.scad  upper_part.scad
original_scad/: GeneralVision.scad  box.scad  globals.scad  hinge.scad  hinged_upper_part.scad  levered_upper_part.scad  lower_part.scad  main_closure.scad  toolkit.scad
src/: base.cpp  base.h  box.cpp  box.h  globals.h  levers.cpp  levers.h  lower_part.cpp  lower_part.h  main.cpp  toolkit.cpp  toolkit.h  upper_part.cpp  upper_part.h
src/base/: colors.h  geometry.cpp  geometry.h  parts.cpp  parts.hpp
src/components/: box.cpp  box.h  levers.cpp  levers.h  lower_part.cpp  lower_part.h  upper_part.cpp  upper_part.h
src/packer/: NaivePacker.cpp  NaivePacker.h  Packer.h
src/parser/: LinearAutoma.hpp  Parseable.h  Preparser.cpp  Preparser.h  operations.cpp  operations.h  scad_2D_parser.cpp  scad_2D_parser.hpp  shapes.cpp  shapes.h  simple_parser.h
src/utils/: color_generators.cpp  color_generators.h  lever_calculators.cpp  lever_calculators.h  structures.cpp  structures.h
